--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Import transactions from Lunch Flow to Actual Budget with terminal UI.",
   "main": "dist/index.js",
   "bin": {
-    "lf-actual": "dist/index.js"
+    "actual-flow": "dist/index.js"
   },
   "scripts": {
     "build": "tsc",
@@ -15,7 +15,7 @@
     "clean": "rm -rf dist"
   },
   "keywords": ["lunch-flow", "actual-budget", "importer", "transactions"],
-  "author": "Your Name",
+  "author": "Amr Awad",
   "license": "MIT",
   "dependencies": {
     "@actual-app/api": "^25.9.0",
