--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "@lunchflow/actual-flow",
   "version": "0.0.1",
   "description": "Import transactions from Lunch Flow to Actual Budget with terminal UI.",
-  "main": "dist/index.js",
+  "main": "./dist/index.js",
   "bin": {
-    "actual-flow": "dist/index.js"
+    "actual-flow": "./dist/index.js"
   },
   "scripts": {
     "build": "tsc",
