--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "dev": "ts-node src/index.ts",
     "prepare": "pnpm run build",
     "install:dev": "pnpm install",
-    "clean": "rm -rf dist"
+    "clean": "rm -rf dist",
+    "release:patch": "npm version patch && git push && git push --tags"
   },
   "keywords": [
     "lunch-flow",
